Module 6/m06a07matrix-handout/grading/2024-10-20-12-32-56/compile.err
Test06.java:16: error: cannot find symbol
        var c = Matrix.mult(a, b);
                ^
  symbol:   variable Matrix
  location: class Test06
1 error
